HDPI-6221: fix bug with multiple defendants but 1 linked